dnl Initialize the autoconf process
AC_INIT(update-passwd.c)
AC_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr)

dnl Lets see if all programs we need are installed
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_PROG(RM,rm,rm -f)

dnl Scan for things we need
AC_CHECK_FUNCS(putgrent)

dnl Finally output everything
AC_OUTPUT(Makefile)

