#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(librpcsecgss, 0.19, nfsv4-wg@citi.umich.edu)
AC_CONFIG_SRCDIR([src/auth_gss.c])
AM_INIT_AUTOMAKE(librpcsecgss, 0.19, nfsv4-wg@citi.umich.edu)
AM_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.
PKG_CHECK_MODULES([GSSGLUE], [libgssglue >= 0.1], [],
  [AC_MSG_ERROR([Unable to locate information required to use libgssglue.
  If you have pkgconfig installed, you might try setting environment
  variable PKG_CONFIG_PATH to /usr/local/lib/pkgconfig])])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strerror])

AC_CONFIG_FILES([Makefile
                 src/Makefile])

AC_OUTPUT(librpcsecgss.pc)
